--- a/wiki_src/sorting/sorting.toml
+++ b/wiki_src/sorting/sorting.toml
@@ -2,5 +2,7 @@ title = "Sorting Algorithms"
 page_type = "Category"
 url = "wiki/sorting"
 subpages = [
-	"Insertion Sort"
+    "Insertion Sort",
+    "Gnome Sort",
+    "Shellsort",
 ]
